--- a/index/index.html
+++ b/index/index.html
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Backing Tracks</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Tools</a>
+                </li>
               </ul>
         </div>
         <div class="row">
